# ned_util

./: .gitignore  README.md  setup.cfg  tox.ini
ned/cp/cli/: main.py
ned/cp/core/: commands.py  constants.py
ned/git/cli/: main.py
ned/git/core/: commands.py
ned/projects/cli/: main.py
ned/projects/core/: config.py  constants.py  projects.py
ned/projects/core/data/: default-session.yaml
ned/py/cli/: main.py
ned/py/core/: commands.py  utils.py
ned/sysinstall/cli/: main.py
ned/sysinstall/core/: install.py
ned/sysinstall/core/distros/: ubuntu.py
ned/sysinstall/core/utils/: utils.py
tests/: test_test.py
