[metadata]
name = ned 
version = 0.0.1
classifiers = 
    Programming Language :: Python :: 3

[options]
zip_safe = False
packages = find:
python_requires = >= 3.10
install_requires = 
    pyyaml
    tmuxp

[options.entry_points]
console_scripts =
    ned-p = ned.projects.cli.main:main
    ned-g = ned.git.cli.main:main
    ned-cp = ned.cp.cli.main:main
    ned-py = ned.py.cli.main:main 
